--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 <div class="flex-left">
                     <a href="#" class="logo">
                         <img src="img/logo.png" alt="">
+                        <span class="small-circle">circle</span>
                         <h1>Mars</h1>
-                        <sup>
-                            <span class="small-circle">circle</span>
-                        </sup>
                     </a>
                     <p><span class="phone-icon">phone</span>+48 604 300 500</p>
                 </div>
                 <div class="flex-right">
-                    <button class="buy-btn">Buy now</button>
+                    <button class="buy-btn">
+                        <span class="text-btn">Buy now</span>
+                    </button>
                     <nav class="header-nav">
                         <button class="menu">menu</button>
                     </nav>
@@ -42,15 +42,111 @@
     <!---------------------END HEADER--------------------------->
 
     <div class="container">
-        
+
     </div>
 </section>
 
 <!----------------------------END INTRO SECTION-------------------->
 
+<!----------------------------ABOUT-FLY---------------------------->
+<section class="about-fly">
+    <div class="droid-bg">
+        <div class="content-wrap">
+            <h2>Tap to fly</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <span class="three-circles">circles</span>
+
+        <!--<div class="max-circle ">-->
+        <!--<div class="middle-circle">-->
+        <!--<div class="min-circle">circle</div>-->
+        <!--</div>-->
+        <!--</div>-->
+    </div>
+    <div class="road-bg">
+        <div class="title-wrap">
+            <h2>Fly higher than before</h2>
+        </div>
+        <div class="btn-wrap">
+            <button class="general-btn">View more</button>
+        </div>
+    </div>
+</section>
+<!--------------------END-ABOUt-FLY----------------------------------->
+
+<!------------------FEATURES------------------------------------------>
+
+<section class="features">
+    <div class="container">
+        <h2>Features</h2>
+        <ul class="features-list">
+            <li class="technology-item">
+                <p>New technology</p>
+            </li>
+            <li class="signal-item">
+                <p>Good signal</p>
+            </li>
+            <li class="use-item">
+                <p>Easy to use</p>
+            </li>
+            <li class="visibility-item">
+                <p>Visibility</p>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<!---------------------------END-FEATURES------------------------------->
+
+<!------------------VISION-GENERATION----------------------------->
+
+<section class="vision-generation">
+    <div class="container">
+        <div class="flex-wrap">
+            <h2>New <span class="red-text">generation</span>
+                of vision<span class="red-text">.</span></h2>
+            <button class="general-btn">View more</button>
+        </div>
+    </div>
+</section>
+
+<!---------------------END-VISION-GENERATION------------------------>
+
+<!---------------------FLYING-GENERATION---------------------------->
+
+<section class="flying-generation">
+    <div class="container">
+        <h2>New <span class="red-text">generation</span>
+                of vision<span class="red-text">.</span></h2>
+        <button class="general-btn">View more</button>
+        <div class="img-wrap">
+            <img class="dron-img" src="img/dron-photo.png" alt="">
+        </div>
+    </div>
+</section>
+
+<!---------------------END-FLYING-GENERATION------------------------->
+
+<!---------------------START-JOURNEY---------------------------------->
+
+<section class="start-journey">
+    <div class="container">
+        <div class="flex-content">
+            <h2>Start your journey.</h2>
+            <button class="general-btn">View more</button>
+        </div>
+    </div>
+</section>
+
+<!----------------------END-START-JOURNEY------------------------------>
 
 <footer class="main-footer">
-
+    <div class="container">
+        <div class="flex-content">
+            <span class="logo">Mars<span class="small-circle">circle</span></span>
+            <p>2016 Copyright. All rights reserved by <a class="small-link" href="#">Symu.co</a></p>
+        </div>
+    </div>
 
 </footer>
 
