--- a/index.html
+++ b/index.html
@@ -45,13 +45,23 @@
     <!---------------------END HEADER--------------------------->
 
     <div class="container">
-        <!--<div class="slider-wrap" style="width: 300px">-->
-            <!--<ul class="bxslider">-->
-                <!--<li><img src="img/road-bg.png" /></li>-->
-                <!--<li><img src="img/start-journey-bg.png" /></li>-->
-                <!--<li><img src="img/road-bg.png" /></li>-->
-            <!--</ul>-->
-        <!--</div>-->
+        <div class="slider-wrap">
+            <ul class="markers-list">
+                <li>marker</li>
+                <li>marker</li>
+                <li>marker</li>
+                <li>marker</li>
+            </ul>
+            <div class="slider-text">
+                <h2>Phantom</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget euismod dolor.</p>
+            </div>
+        </div>
+        <div class="wrap-circle">
+            <div class="big-circle">
+                <img class="dron-intro" src="img/dron-photo.png" alt="">
+            </div>
+        </div>
     </div>
 </section>
 
@@ -64,13 +74,13 @@
             <h2>Tap to fly</h2>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <span class="three-circles">circles</span>
+        <!--<span class="three-circles">circles</span>-->
 
-        <!--<div class="max-circle ">-->
-        <!--<div class="middle-circle">-->
-        <!--<div class="min-circle">circle</div>-->
-        <!--</div>-->
-        <!--</div>-->
+        <div class="max-circle ">
+            <div class="middle-circle">
+                <div class="min-circle">circle</div>
+            </div>
+        </div>
     </div>
     <div class="road-bg">
         <div class="title-wrap">
