--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <ul>
         <!-- Submenu -->
         <li class="pushy-submenu">
-            <a href="#">Submenu</a>
+            <a href="#">Choose the robot</a>
             <ul>
-                <li class="pushy-link"><a href="#">Item 1</a></li>
-                <li class="pushy-link"><a href="#">Item 2</a></li>
-                <li class="pushy-link"><a href="#">Item 3</a></li>
+                <li class="pushy-link"><a href="#">Angry robot</a></li>
+                <li class="pushy-link"><a href="#">Dancing robot</a></li>
+                <li class="pushy-link"><a href="#">Normal robot</a></li>
             </ul>
         </li>
-        <li class="pushy-link"><a href="#">Item 1</a></li>
-        <li class="pushy-link"><a href="#">Item 2</a></li>
+        <li class="pushy-link"><a href="#">Our features</a></li>
+        <li class="pushy-link"><a href="#">Find robot</a></li>
     </ul>
 </nav>
 
