--- a/index.html
+++ b/index.html
@@ -61,37 +61,6 @@
                             <button class="menu menu-btn">menu</button>
                         </nav>
 
-                        <!--<div class="header-nav">-->
-                            <!--<nav class="menu-list">-->
-                                <!--<div class="icon-list">-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-star-o"></i><span>Angry Robots</span></a>-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-bell-o"></i><span>Kind robots</span></a>-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-envelope-o"></i><span>Funny robots</span></a>-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-comment-o"></i><span>Real robots</span></a>-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-bar-chart-o"></i><span>Dancing robots</span></a>-->
-                                    <!--<a href="#"><i class="fa fa-fw fa-newspaper-o"></i><span>Normal robots</span></a>-->
-                                <!--</div>-->
-                            <!--</nav>-->
-                            <!--<button class="close-button" id="close-button">Close Menu</button>-->
-                            <!--<div class="morph-shape" id="morph-shape" data-morph-open="M-7.312,0H15c0,0,66,113.339,66,399.5C81,664.006,15,800,15,800H-7.312V0z;M-7.312,0H100c0,0,0,113.839,0,400c0,264.506,0,400,0,400H-7.312V0z">-->
-                                <!--<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 800" preserveAspectRatio="none">-->
-                                    <!--<path d="M-7.312,0H0c0,0,0,113.839,0,400c0,264.506,0,400,0,400h-7.312V0z"/>-->
-                                <!--</svg>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <!--<button class="menu" id="open-button">Open Menu</button>-->
-
-                        <!--<nav class="st-menu st-effect-1" id="menu-1">-->
-                            <!--<h2 class="icon icon-lab">Sidebar</h2>-->
-                            <!--<ul>-->
-                                <!--<li><a class="icon icon-data" href="#">Data Management</a></li>-->
-                                <!--<li><a class="icon icon-location" href="#">Location</a></li>-->
-                                <!--<li><a class="icon icon-study" href="#">Study</a></li>-->
-                                <!--<li><a class="icon icon-photo" href="#">Collections</a></li>-->
-                                <!--<li><a class="icon icon-wallet" href="#">Credits</a></li>-->
-                            <!--</ul>-->
-                        <!--</nav>-->
-
                     </div>
                 </div>
             </div>
@@ -199,15 +168,17 @@
 
     <section class="vision-generation">
         <div class="man-bg">content</div>
-        <div class="grey-bg jq-tab">
-            <h2>New <span class="red-text">generation</span>
-                of vision<span class="red-text">.</span></h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.
-            </p>
-            <button class="general-btn jq-btn">View more</button>
+        <div class="grey-bg ">
+            <div class="jq-tab">
+                <h2>New <span class="red-text">generation</span>
+                    of vision<span class="red-text">.</span></h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat.
+                </p>
+                <button class="general-btn jq-btn">View more</button>
+            </div>
         </div>
     </section>
 
